---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2022-06-03
  Changes:
    - Workaround for stdlib's incorrect usage of __DebugAdapter API
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2022-06-02
  Changes:
    - Force `require` hook to take only one argument
  Major Features:
    - Add `funccapture` to capture Lua functions for the init and update functions of simulations
      including the upvalues of the given functions allowing for easy reuse of code
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2021-01-30
  Changes:
    - Fixed modloader `require` hook on additional required files from control.lua